--- a/README
+++ b/README
@@ -89,3 +89,176 @@ care explica in detaliu algoritmul folosit.
 Radu Rendec
 352 C2
                                                 februarie 2005
+
+罗马尼亚语：
+3、4信号处理的主题。
+
+= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
+
+
+
+一般的描述
+
+------------------
+
+
+
+我想所有的主题imbin 3和4的要求在一个主题
+
+完成所有的功能的程序。所进行的手术
+
+可以通过在命令行参数的选择。程序没有运行
+
+一个参数列表将提供一个可用的你的选择。
+
+
+
+所有的功能是去除噪声
+
+利用“频谱和下降过程”的应用
+
+参数均衡器。
+
+
+
+编译和运行
+
+-------------------
+
+
+
+编写了测试程序，GNU / Linux平台上使用i686，
+
+只有16波的立体匹配样本文件的字节。程序理论
+
+忍受波和样本文件的字节和8或16的任何数
+
+渠道。
+
+
+
+我没有做测试，可能比其他的x86架构的机会
+
+工作是相当小的。存在函数依赖
+
+这辆车的性能，如字节存储顺序和文字大小。
+
+港区在其他平台上看这些需要修订
+
+的功能。
+
+
+
+汇编做的一个简单的“make”。查看选项
+
+可用的程序可以运行，没有任何一个参数：
+
+
+
+美元/ wavetrans。
+
+
+
+文件作为输入数据有一个均衡器
+
+例如，在equalizer.txt所描述的格式，和使用。
+
+
+
+实施细节
+
+好几家
+
+
+
+我试着尽可能少多少计算使用逗号
+
+家具。在一个复杂的数字代表2名结构
+
+“龙龙”型。两名分别是部分真实的，
+
+复杂的虚构的数字。至少在每个成员
+
+你使用的是16字节的重要fractionara（实际工作的一部分
+
+在固定的省略，省略了派之间，是有点
+
+排名排名第15，16）。它的结构描述和一些鲭鱼
+
+“complex.h找到的文件”。
+
+
+
+离散傅里叶变换和反变换）的要求
+
+双方的手术处理（噪声消除和均衡）
+
+一个实施optimizata使用抽取算法
+
+在时间。optimizarile细节的实施和执行
+
+在评论中找到文件“fft.c”。
+
+
+
+“wave.c包含必要的文件转换功能esantioanelor”
+
+内部的波矢量格式在复杂数字和回来。这些
+
+功能是依赖于平台的平台，是因为我想
+
+Little Endian，一样是真实的，但波（在x86无效
+
+一般）。
+
+
+
+在“常规wave.c有计算功能的“权重（Weight）
+
+需要Windows函数叠加2（d（n）用
+
+依据问题）。
+
+
+
+大部分的代码找到主文件
+
+（“wavetrans.c”）。这里的代码是在变换域
+
+编码/解码的频率段上的分配
+
+利用窗口（框架）和重组的权重函数。
+
+
+
+傅立叶变换在频率域有一个通用的头，
+
+由指针到一个特定的背景资料（包括
+
+这些变化所需的其他功能，预先计算）
+
+问题的大小，数量的信道上的应用
+
+复数和矢量变换。
+
+
+
+傅立叶变换是两个手术
+
+_分别还原和噪声_跨跨_均衡器。代码
+
+初始化必要的语境的转换处理
+
+找到主要噪声函数417 460线之间。代码
+
+语境的转换是必要的初始化均衡器
+
+发现在compute _日期函数_均衡器。
+
+
+
+分配的代码在Windows和reasamplare找到函数
+
+主562～641线之间。在这个代码有一个评论
+
+在算法的详细使用说明。
